[package]
name = "poe"
version = "0.1.0-dev"
authors = ["Alex Crawford <poe@accounts.acrawford.com>"]
edition = "2018"

[dependencies]
cortex-m = "*"
cortex-m-rt = { version = "*", features = [ "device" ] }
cortex-m-log = { version = "*", optional = true }
efm32gg11b820 = { version = "*", features = [ "rt" ] }
efm32gg-hal = { git = "https://github.com/crawford/efm32gg-hal", branch = "efm32gg11b820", features = [ "chip-efm32gg11b820" ] }
embedded-hal = "*"
led = "*"
log = "*"
smoltcp = { git = "https://github.com/m-labs/smoltcp", default-features = false, features = [ "ethernet", "proto-dhcpv4", "socket-tcp" ] }

[profile.release]
lto = true

[features]
logging = [ "cortex-m-log/log-integration", "cortex-m-log/itm", "smoltcp/log" ]
