[package]
name = "poe"
version = "0.1.0-dev"
authors = ["Alex Crawford <poe@accounts.acrawford.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = { version = "0.6.12", features = [ "device" ] }
cortex-m-log = { version = "0.7.0", optional = true }
efm32gg11b820 = { version = "0.9.0", features = [ "rt" ] }
efm32gg-hal = { git = "https://github.com/crawford/efm32gg-hal", branch = "efm32gg11b820", features = [ "chip-efm32gg11b820" ] }
embedded-hal = "0.2.3"
led = "0.2.0"
log = "0.4.8"
panic-itm = "0.4.1"
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", default-features = false, features = [ "socket-dhcpv4", "socket-tcp" ] }

[profile.dev]
opt-level = "s"

[profile.release]
lto = true
opt-level = "s"

[features]
logging = [ "cortex-m-log/log-integration", "cortex-m-log/itm", "smoltcp/log" ]
