[package]
name = "poe"
version = "0.1.0-dev"
authors = ["Alex Crawford <poe@accounts.acrawford.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = { version = "0.6.12", features = [ "device" ] }
cortex-m-rtic = "1.0.0"
cortex-m-log = { version = "0.7.0", optional = true }
efm32gg11b820 = { version = "0.9.0", features = [ "rt" ] }
efm32gg-hal = { git = "https://github.com/crawford/efm32gg-hal", branch = "efm32gg11b820", features = [ "chip-efm32gg11b820" ] }
embedded-hal = "0.2.3"
dwt-systick-monotonic = "1.0.0"
ignore-result = "0.2.0"
led = { git = "https://github.com/crawford/led", branch = "rgb" }
log = "0.4.8"
smoltcp = { version = "0.8.0", default-features = false, features = [ "socket-dhcpv4", "socket-tcp" ] }

[build-dependencies]
chrono = "0.4.19"
deflate = { version = "1.0.0", features = [ "gzip" ] }

[profile.dev]
opt-level = "s"

[profile.release]
lto = true
opt-level = "s"

[features]
default = [ "logging" ]
logging = [ "cortex-m-log/log-integration", "cortex-m-log/itm", "smoltcp/log" ]
silent = [ "log/max_level_off" ]
